<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="Outlet_Ctx" Id="{7b899344-1723-494b-8de2-1c9035eb7c77}">
    <Declaration><![CDATA[TYPE Outlet_Ctx :
STRUCT
	smgr			: I_StateManager;
	iEStop			: I_Tag;
	iOperational	: I_Tag;
	
	bRequestButton	: BOOL;
	bDrainValveOpen	: BOOL;
	
	iTank			: I_Domain;
	iIsEmpty		: I_Flag;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>